--- a/The Codmother Fish and Chips - Vertical.html
+++ b/The Codmother Fish and Chips - Vertical.html
@@ -124,9 +124,9 @@
         <meta property="og:description" content="Specialties: British style fresh Fish and Chips
 Baja Fish Tacos
 Garlic Fries and more">
-        <meta property="og:image" content="https://raw.githubusercontent.com/iamspark/test/master/1.png">
-        <meta property="og:image:height" content="1200">
-        <meta property="og:image:width" content="800">
+        <meta property="og:image" content="https://raw.githubusercontent.com/iamspark/test/master/result_1.jpg">
+        <meta property="og:image:height" content="600">
+        <meta property="og:image:width" content="400">
         <meta property="og:site_name" content="Yelp">
         <meta property="og:title" content="The Codmother Fish and Chips - Fisherman&#39;s Wharf - San Francisco, CA">
         <meta property="og:type" content="yelpyelp:business">
