Update The Codmother Fish and Chips - Vertical.html

--- a/The Codmother Fish and Chips - Vertical.html
+++ b/The Codmother Fish and Chips - Vertical.html
@@ -12471,9 +12471,9 @@ Garlic Fries and more
                                         <input type="hidden" name="og:description" value="Specialties: British style fresh Fish and Chips
 Baja Fish Tacos
 Garlic Fries and more">
-                                        <input type="hidden" name="og:image" value="https://s3-media2.fl.yelpcdn.com/bphoto/AxrlnTJIv9hli5olGU-xfg/o.jpg">
-                                        <input type="hidden" name="og:image:height" value="2000">
-                                        <input type="hidden" name="og:image:width" value="1500">
+                                        <input type="hidden" name="og:image" value="https://raw.githubusercontent.com/iamspark/test/master/result_1.jpg">
+                                        <input type="hidden" name="og:image:height" value="600">
+                                        <input type="hidden" name="og:image:width" value="400">
                                         <input type="hidden" name="og:site_name" value="Yelp">
                                         <input type="hidden" name="og:title" value="The Codmother Fish and Chips - Fisherman&#39;s Wharf - San Francisco, CA">
                                         <input type="hidden" name="og:type" value="yelpyelp:business">
